--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,47 @@
-plugins {
-    id 'java'
-}
+apply plugin: 'java'
+apply plugin: 'idea'
+apply plugin: 'maven'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 group 'xyz.yyaos'
 version '1.0'
 
 sourceCompatibility = 1.8
 
+def googleGuavaVersion = "27.0.1-jre"
+
+configurations {
+    mybatisGenerator
+}
+
+buildscript {
+    ext {
+        springBootVersion = '2.1.1.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
 repositories {
-    mavenCentral()
+    maven { url "http://maven.aliyun.com/nexus/content/groups/public" }
+    maven { url "https://repo.spring.io/libs-milestone" }
+    maven { url "http://repo.maven.apache.org/maven2" }
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.freemarker:freemarker:2.3.23'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    compile group: 'com.google.guava', name: 'guava', version: "${googleGuavaVersion}"
+    compile group: 'com.alibaba', name: 'fastjson', version: '1.2.46'
+    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    
+    compile 'com.auth0:java-jwt:3.4.0'
 }
+
+
