--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: "${googleGuavaVersion}"
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.46'
     compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.2'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
     compile 'com.auth0:java-jwt:3.4.0'
 }
